--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "dayjs": "^1.11.13",
     "drizzle-orm": "^0.34.1",
